removing fixed footer on mobile displays

--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -250,11 +250,12 @@ footer p {
     height:42px;
     border:none !important;
 }
-@media screen and (orientation:portrait){
-    .fixed-footer:after{
+@media screen and (min-width: 350px) and (orientation:portrait){
+    .fixed-footer{
         display: none;
     }
 }
+@media screen and (max-width: 1200px){
 .fixed-footer{
        position:fixed;
        left:0px;
@@ -264,7 +265,7 @@ footer p {
        background: #F4E5D9;
        background: rgba(244,229,217,0.7);
    
-}
+}}
 
 .TA_restaurantWidgetWhite {
     margin-right: 10px;
